# opencv_dnn

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  package.xml  plugins.xml
config/: yolov3.yaml  yolov4.yaml  yolov4_onnx.yaml  yolov5x.yaml
include/opencv_dnn/: yolov5_parser.h
launch/: test_video_0.launch  yolo3.launch  yolo4.launch  yolo4_onnx.launch
opencv_dnn/: CMakeLists.txt  package.xml
opencv_dnn/include/opencv_dnn/: detections_parser.h  node.h  yolov8_parser.h
opencv_dnn/launch/: add_detects_to_bag.launch  johnny5.launch  replay_bag.launch  test_usb_cam.launch  test_video_0.launch  yolo3.launch  yolov5x.launch
opencv_dnn/src/: node.cpp  opencv_dnn.cpp  yolov5_parser.cpp  yolov8_parser.cpp
src/: node.cpp  opencv_dnn.cpp  yolov5_parser.cpp  yolov8_parser.cpp
