<?xml version="1.0"?>
<package format="2">
  <name>opencv_dnn</name>
  <version>0.0.0</version>
  <description>Emulates darknet_ros using OpenCV.</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  
  <export>
  </export>
</package>
