<?xml version="1.0"?>
<package format="2">
  <name>opencv_dnn</name>
  <version>0.0.1</version>
  <description>Runs OpenCV DNN on images.</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pluginlib</depend>
  <depend>protobuf-dev</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>yaml-cpp</depend>
  
  <export>
    <opencv_dnn plugin="${prefix}/plugins.xml"/>
  </export>
</package>
